code quality improved, removed sonar properties from pom.xml, modified run.sh to take sonar credentials from docker/.env